--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: poly_inside_server
+name: database
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
@@ -8,8 +8,12 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  drift: ^2.20.0
+  sqlite3: ^2.4.6
   # path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.12
+  drift_dev: ^2.20.1
   lints: ^4.0.0
   test: ^1.24.0
