--- a/poly_inside_server/pubspec.yaml
+++ b/poly_inside_server/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  grpc: ^4.0.1
+  protobuf: ^3.1.0
   # path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.12
   lints: ^4.0.0
   test: ^1.24.0
