--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,4 @@
-
-name: database
+name: poly_inside_server
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
