--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 # https://dart.dev/guides/libraries/private-files
 # Created by `dart pub`
 .dart_tool/
+.packages
+.pub/
+.DS_Store
+# Remove the following pattern if you wish to check in your lock file
+pubspec.lock
 db.sqlite
+*.exe
+*.g.dart
