--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   l: ^4.0.2
   crypto: ^3.0.5
   schedules: ^0.0.5
+  http: ^1.2.2
+  html: ^0.15.4
   # path: ^1.8.0
 
 dev_dependencies:
