--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .packages
 .pub/
 .DS_Store
+.sqlite
+.exe
+.log
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
-*.exe
